gocd/gocd-tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gocd-tls-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - gocd.tamdevops.tk
    secretName: gocd-tls-secret
  rules:
  - host: gocd.tamdevops.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gocd-server
            port:
              number: 8153
